--- a/webApps/LesoesDePele/requirements.txt
+++ b/webApps/LesoesDePele/requirements.txt
@@ -1,7 +1,5 @@
-Flask==2.0.2
-numpy==1.19.2
-pandas==1.3.4
-Pillow==8.4.0
-streamlit==1.2.0
-tensorflow_cpu==2.5.0
-Werkzeug==2.0.2
+numpy==1.24.3
+pandas==1.5.3
+Pillow==9.5.0
+streamlit==1.25.0
+tensorflow==2.13.0
